fix(search): disable search feature (#12)
Toggle the search feature to false in _config.yml.
Remove the js folder and the search-data.json file.

--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ github_username : !!str ChaosDynamix
 # THEME SETTINGS
 remote_theme    : !!str pmarsceill/just-the-docs
 footer_content  : !!str "Copyright &copy; 2020 ChaosDynamix."
-search_enabled  : !!bool true
+search_enabled  : !!bool false
 aux_links       : !!map
     "Github": !!seq
         - "//github.com/ChaosDynamix/Arcadia"
