--- a/_config.yml
+++ b/_config.yml
@@ -30,23 +30,8 @@ exclude: !!seq
 # DEFAULTS
 defaults: !!seq
 
-    - !!map         # LOGICAL VOLUME MANAGER
+    - !!map         # GUIDE
         scope         : !!map
-            path    : !!str "_guide/system/lvm"
+            path    : !!str "guide/"
         values        : !!map
             layout  : !!str default
-            context : !!str lvm
-
-    - !!map         # DESKTOP ENVIRONMENT
-        scope         : !!map
-            path    : !!str "_guide/gui/de"
-        values        : !!map
-            layout  : !!str default
-            context : !!str de
-
-    - !!map         # WINDOW MANAGER
-        scope         : !!map
-            path    : !!str "_guide/gui/wm"
-        values        : !!map
-            layout  : !!str default
-            context : !!str wm
