refactor(jekyll): rename pages folder
Rename the jekyll pages folder (guide -> guides).
Rename the jekyll defaults scope path (guide -> guides).

--- a/_config.yml
+++ b/_config.yml
@@ -35,6 +35,6 @@ defaults : !!seq
 
   - !!map
     scope  : !!map
-      path   : !!str "guide/"
+      path   : !!str "guides/"
     values : !!map
       layout : !!str default
