fix(jekyll): _config.yml (#76)
Fix the description of the project.
Change the path of the guide (guides -> guide).

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # GLOBAL SETTINGS
 title           : !!str Arcadia
-description     : !!str Arcadia is a website that presents several scenarios for installing Arch Linux on LUKS
+description     : !!str Arcadia is a website that presents a personal guide for installing Arch Linux on LUKS and UEFI
 baseurl         : !!str "/Arcadia"
 github_username : !!str ChaosDynamix
 
@@ -35,6 +35,6 @@ defaults : !!seq
 
   - !!map
     scope  : !!map
-      path   : !!str "guides/"
+      path   : !!str "guide/"
     values : !!map
       layout : !!str default
