build(mkdocs): add favicon path (#113)
Add the location of the favicon in the Mkdocs configuration.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -10,6 +10,7 @@ repo_url: https://github.com/chaosdynamix/arcadia
 # Theme
 theme:
   name: material
+  favicon: _assets/favicon.ico
 
 # Navigation
 nav:
