--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,7 +3,8 @@ site_name: Arcadia
 site_url: https://chaosdynamix.github.io/arcadia/
 site_author: Chaosdynamix
 site_description: >-
-  Arcadia is a personal documentation for installing and configuring Arch Linux on a specific hardware configuration
+  Arcadia is a personal documentation for installing and
+  configuring Arch Linux on a specific hardware configuration
 
 # Repository
 repo_name: chaosdynamix/arcadia
@@ -16,9 +17,7 @@ theme:
 
 # Navigation
 nav:
-
   - Home: index.md
-
   - Preparation:
     - Installation image:
       - Download: preparation/installation-image/download.md
@@ -36,7 +35,6 @@ nav:
       - Partitioning: preparation/storage/partitioning.md
       - Encryption: preparation/storage/encryption.md
       - Filesystems: preparation/storage/filesystems.md
-
   - Installation:
     - System:
       - Base: installation/system/base.md
