build(mkdocs): add palette conf (#113)
Add temporary palette configuration for the Mkdocs/Material theme in mkdocs.yml.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -13,6 +13,9 @@ repo_url: https://github.com/chaosdynamix/arcadia
 # Theme
 theme:
   name: material
+  palette:
+    scheme: slate
+    primary: teal
   favicon: _assets/favicon.ico
 
 # Navigation
