build(mkdocs): add markdown extensions (#113)
Add markdown extensions in the Mkdocs configuration.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -17,6 +17,13 @@ theme:
     scheme: slate
     primary: teal
   favicon: _assets/favicon.ico
+# Markdown extensions
+markdown_extensions:
+  - admonition
+  - footnotes
+  - pymdownx.details
+  - pymdownx.superfences
+  - pymdownx.tabbed
 
 # Navigation
 nav:
