build(mkdocs): activate theme features for mkdocs (#113)
Activate some Mkdocs/Material theme features in the mkdocs configuration.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -19,6 +19,10 @@ theme:
   favicon: _assets/favicon.ico
   icon:
     repo: fontawesome/brands/github
+  features:
+    - navigation.tabs
+    - navigation.sections
+
 # Markdown extensions
 markdown_extensions:
   - admonition
