--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -16,6 +16,7 @@ theme:
   palette:
     scheme: slate
     primary: teal
+    accent: teal
   favicon: _assets/favicon.ico
   icon:
     repo: fontawesome/brands/github
